--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   "author": "Peter Munro <contact@petermunro.org>",
   "license": "ISC",
   "dependencies": {
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react": "15.1.0",
+    "react-dom": "15.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.6.5",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "eslint": "^2.3.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^4.2.2",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "babel-cli": "6.10.1",
+    "babel-core": "6.9.1",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "6.5.0",
+    "eslint": "2.13.0",
+    "eslint-loader": "1.3.0",
+    "eslint-plugin-react": "5.2.2",
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.14.1"
   },
   "eslintConfig": {
     "env": {
